# Collector

./: pyproject.toml
Docker/dev/psql/: docker-compose.yml
Docker/dev/rabbit/: docker-compose.yml
migrations/: env.py
migrations/versions/: 17dbbd1fe84d_add_all_model_in_invoices.py  21512332b203_add_all_model_in_invoices.py  28ae8e497a15_add_all_model_in_invoices.py  3451e5a58497_edit_model_product_change_to_optional_.py  78da9bec5746_init.py  8772008eca36_add_other_field.py  999f605577ec_add_field_absolute_id_to_all_model_in_.py  cd84c3b91739_add_all_model_in_invoices.py
src/business/: response_handler.py
src/config/: setup.py
src/repository/: data_adapter.py  db.py  input_schemas.py  models.py  output_schemas.py
src/tools/: rabbit_client.py
src/web/: health_manager.py  main.py
src/web/api/: documentation.py  schemas.py
