[tool.poetry]
name = "collector"
version = "0.1.0"
description = ""
authors = ["mahdi <mahdidehghani519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
redis = "^5.0.1"
aio-pika = "^9.3.1"
ujson = "^5.8.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.22"
pydantic = "<2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
black = "^23.11.0"
isort = "^5.12.0"
docker = "^6.1.3"
pytest-asyncio = "^0.21.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = 'env.py'


[tool.pytest.ini_options]
python_functions = ['test_*', 'unittest_*']
